WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
255439
always use document URL as the source of a ResizeObserver loop limit error
https://bugs.webkit.org/show_bug.cgi?id=255439
Summary
always use document URL as the source of a ResizeObserver loop limit error
Cameron McCormack (:heycam)
Reported
2023-04-13 22:27:18 PDT
In Document::updateResizeObservations we throw an error if we exceed some limit for the number of times we loop processing ResizeObserver notifications. This uses getParserLocation to get the location to use in the error, which returns the empty string if parsing the document has finished. I think we should just use the document URL. When we pass in the empty string to reportException, we end up censoring the error message as "Script error." because we think the error came from a different origin, and the "ResizeObserver loop completed with undelivered notifications." message gets lost.
Attachments
Add attachment
proposed patch, testcase, etc.
Cameron McCormack (:heycam)
Comment 1
2023-04-13 22:27:38 PDT
rdar://107905388
Cameron McCormack (:heycam)
Comment 2
2023-04-13 22:34:08 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/12729
EWS
Comment 3
2023-04-14 14:24:09 PDT
Committed
262989@main
(7b6d036d50a0): <
https://commits.webkit.org/262989@main
> Reviewed commits have been landed. Closing PR #12729 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug